# containers-bug

./: README.md  containers-bug.cabal  shell.nix
app/: Main.hs
