name:                 containers-bug
version:              0.0.1.0
cabal-version:        1.18
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/containers-bug
bug-reports:          https://github.com/mrkkrp/containers-bug/issues
category:             Categories
synopsis:             Description
build-type:           Simple
description:          Description.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/containers-bug.git

executable containers-bug
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base       == 4.12.0.0
                    , QuickCheck == 2.12.4
                    , containers == 0.6.0.1
                    , hspec      == 2.5.6
  default-language:   Haskell2010
